# amazon-gallery-app

./: README.md
backend/: .gitignore  manage.py  pyproject.toml  requirements.txt
backend/AmazonGalleryBackend/: asgi.py  settings.py  urls.py  wsgi.py
backend/scraperapi/: apps.py
